# legacy-migration

./: .gitignore  architecture-1.mmd  architecture-2.mmd  architecture.mmd  migration.code-workspace  migration.md  ubiquitous_sample.md
workspace/: .gitignore  README.md  architecture.md  build-plan.md  copilot-mcp.json  docker-compose.yml  main.py  pyproject.toml  scratchpad.txt  tools-and-skills.md
workspace/deliverables/: api-mapping.md  bounded-contexts.md  brd.md  copilot-mcp.json  mcp-options.md
workspace/deliverables/citations/: index.md
workspace/deliverables/features/: cart-and-checkout.feature  cart-and-checkout.feature.cs  catalog.feature  catalog.feature.cs  (+20 more)
workspace/mcp_server/: mcp-options.md  mcp_client.py  mcp_server.py
workspace/prompts/: agents.md  api-mapping-template.md  bounded-contexts-template.md  brd-template.md  context-readme-template.md  project-readme-template.md  reqnroll-readme-template.md  summary-system.md  summary-user.md  system-prompts.md  ubiquitous-language-template.md  workflow-header.md
workspace/roslyn_extractor/: Program.cs  roslyn_extractor.csproj
workspace/scripts/: agent_handoff.ps1  assemble_ul_from_parquet.py  build_citation_index.py  context_keywords.py  fix_reqnroll_steps_via_mcp.py  generate_brd_gherkin_via_mcp.py  generate_context_keywords_via_mcp.py  generate_deliverables_via_mcp.py  generator_report.ps1  ingest_legacy.py  load_graph_vector.py  next_steps_full_via_mcp.py  next_steps_llm_mcp.py  next_steps_via_mcp.py  prompt_catalog.py  start_mcp_http.ps1  validate_parquet.py  write_ul_parquet.py
(+149 files in other folders)
