[project]
name = "migration-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.3",
    "neo4j>=6.0.3",
    "pyarrow>=22.0.0",
    "qdrant-client>=1.16.2",
    "sentence-transformers>=5.2.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-c-sharp>=0.23.1",
    "tree-sitter-languages>=1.10.2",
]
